refactor: Apply DSL-style constants pattern to benchmark reporting
- Applied DSL-style constants pattern consistently across benchmark modules
- Replaced string literals with structured constant classes following CUI standards
- Simplified constant usage with static imports for better readability
- Consolidated reporting constants in ReportConstants for centralized management
- Removed deprecated STATS constant that violated pre-1.0 identifier rule
- Fixed constant naming to follow established patterns (Defaults, Properties, Keys)

This change improves code maintainability and follows the established CUI
patterns for constants management as documented in the coding standards.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>